fixed a bug making slider image to be not responsive

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -63,12 +63,14 @@ body{
   
 }
 .slider-container{
-  height: 600px;
-  width: 785px;
+  max-height: 600px;
+  max-width: 600px;
   
 }
 .slider-container img{
-  border-radius: 120%;
+  border-radius: 50%;
+  max-width: 100%;
+  height: auto;
 }
 
 .hero-title{
